--- a/Charts/fluentd/templates/serviceaccount.yaml
+++ b/Charts/fluentd/templates/serviceaccount.yaml
@@ -1,5 +1,11 @@
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: fluentd
-  namespace: monitoring
+  name: {{ include "fluentd.serviceAccountName" . }}
+  labels:
+    app: {{ template "fluentd.name" . }}
+    chart: {{ template "fluentd.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+{{- end -}}
