--- a/Charts/fluentd/values.yaml
+++ b/Charts/fluentd/values.yaml
@@ -19,6 +19,12 @@ output:
 
 env: {}
 
+plugins:
+  enabled: true
+  pluginsList:
+    - fluent-plugin-dedot_filter
+    - fluent-plugin-kubernetes_metadata_filter
+
 # Extra Environment Values - allows yaml definitions
 extraEnvVars:
 #  - name: VALUE_FROM_SECRET
@@ -44,19 +50,19 @@ service:
       containerPort: 24284
 
 metrics:
-  enabled: false
+  enabled: true
   service:
     port: 24231
   serviceMonitor:
-    enabled: false
+    enabled: true
     additionalLabels: {}
     # namespace: monitoring
     # interval: 30s
     # scrapeTimeout: 10s
 
-annotations: {}
-#  prometheus.io/scrape: "true"
-#  prometheus.io/port: "24231"
+annotations:
+  prometheus.io/scrape: "true"
+  prometheus.io/port: "24231"
 
 ingress:
   enabled: false
@@ -103,6 +109,7 @@ configMaps:
       port 24220
       tag fluentd.monitor.metrics
     </source>
+
   system.conf: |-
     <system>
       root_dir /tmp/fluentd-buffers/
@@ -117,7 +124,7 @@ configMaps:
     <match **>
       @id elasticsearch
       @type elasticsearch
-      @log_level info
+      @log_level debug
       include_tag_key true
       # Replace with the host/port to your Elasticsearch cluster.
       host "#{ENV['OUTPUT_HOST']}"
@@ -125,19 +132,17 @@ configMaps:
       scheme "#{ENV['OUTPUT_SCHEME']}"
       ssl_version "#{ENV['OUTPUT_SSL_VERSION']}"
       logstash_format true
-      index_name logstash.%Y%m%d 
       <buffer>
         @type file
         path /var/log/fluentd-buffers/kubernetes.system.buffer
-        flush_mode immediate
+        flush_mode interval
         retry_type exponential_backoff
-        flush_thread_count 4
-        reload_connections false
-        reconnect_on_error true
-        reload_on_failure true
-        retry_forever  true
+        flush_thread_count 2
+        flush_interval 5s
+        retry_forever
         retry_max_interval 30
         chunk_limit_size "#{ENV['OUTPUT_BUFFER_CHUNK_LIMIT']}"
+        queue_limit_length "#{ENV['OUTPUT_BUFFER_QUEUE_LIMIT']}"
         overflow_action block
       </buffer>
     </match>
@@ -168,6 +173,40 @@ persistence:
   # annotations: {}
   accessMode: ReadWriteOnce
   size: 10Gi
+
+rbac:
+  # Specifies whether RBAC resources should be created
+  create: true
+
+serviceAccount:
+  # Specifies whether a ServiceAccount should be created
+  create: true
+  # The name of the ServiceAccount to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name:
+
+# Enable autoscaling using HorizontalPodAutoscaler
+autoscaling:
+  enabled: false
+  minReplicas: 2
+  maxReplicas: 5
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 60
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 60
+          
+# Consider to set higher value when using in conjuction with autoscaling
+# Full description about this field: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.15/#pod-v1-core
+terminationGracePeriodSeconds: 90
 
 nodeSelector: {}
 
