--- a/Charts/fluentd/templates/deployment.yaml
+++ b/Charts/fluentd/templates/deployment.yaml
@@ -1,9 +1,13 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
+{{- if .Values.autoscaling.enabled}}
+kind: StatefulSet
+{{- else}}
 kind: Deployment
+{{- end}}
 metadata:
   name: {{ template "fluentd.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ template "fluentd.name" . }}
+    app: {{ template "fluentd.name" . }}
     chart: {{ template "fluentd.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -11,7 +15,7 @@ spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ template "fluentd.name" . }}
+      app: {{ template "fluentd.name" . }}
       release: {{ .Release.Name }}
   {{- if .Values.persistence.enabled }}
   strategy:
@@ -20,7 +24,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ template "fluentd.name" . }}
+        app: {{ template "fluentd.name" . }}
         release: {{ .Release.Name }}
       annotations:
         checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
@@ -34,12 +38,14 @@ spec:
         - name: {{ $pullSecret }}
       {{- end }}
 {{- end }}
-      serviceAccountName: fluentd
-      serviceAccount: fluentd
+      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+      {{- if and (.Values.plugins.enabled) (gt (len .Values.plugins.pluginsList) 0) }}
+        command: ["/bin/sh", "-c", "/etc/fluent/config.d/install-plugins.sh"]
+      {{- end }}
         env:
           - name: OUTPUT_HOST
             value: {{ .Values.output.host | quote }}
@@ -51,6 +57,8 @@ spec:
             value: {{ .Values.output.sslVersion | quote }}
           - name: OUTPUT_BUFFER_CHUNK_LIMIT
             value: {{ .Values.output.buffer_chunk_limit | quote }}
+          - name: OUTPUT_BUFFER_QUEUE_LIMIT
+            value: {{ .Values.output.buffer_queue_limit | quote }}
           {{- range $key, $value := .Values.env }}
           - name: {{ $key | quote }}
             value: {{ $value | quote }}
@@ -89,17 +97,20 @@ spec:
           mountPath: /etc/fluent/config.d
         - name: buffer
           mountPath: "/var/log/fluentd-buffers"
+      serviceAccountName: {{ template "fluentd.fullname" . }}
       volumes:
         - name: config-volume-{{ template "fluentd.fullname" . }}
           configMap:
             name: {{ template "fluentd.fullname" . }}
-        - name: buffer
-          {{- if .Values.persistence.enabled }}
+            defaultMode: 0777
+        {{- if and .Values.persistence.enabled (not .Values.autoscaling.enabled) }}
+        - name: buffer          
           persistentVolumeClaim:
-            claimName: {{ template "fluentd.fullname" . }}
-          {{- else }}
+            claimName: {{ template "fluentd.fullname" . }}       
+        {{- else if (not .Values.persistence.enabled) }}
+        - name: buffer  
           emptyDir: {}
-          {{- end }}
+        {{- end }}
     {{- with .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
@@ -112,3 +123,14 @@ spec:
       tolerations:
 {{ toYaml . | indent 8 }}
     {{- end }}
+{{- if and .Values.persistence.enabled (.Values.autoscaling.enabled) }}
+  volumeClaimTemplates:
+  - metadata:
+      name: buffer
+    spec:
+      accessModes: [{{ .Values.persistence.accessMode }}]
+      storageClassName: {{ .Values.persistence.storageClass }} 
+      resources:
+        requests:
+          storage: {{ .Values.persistence.size }}
+{{- end }}
