--- a/Charts/elasticsearch/templates/ingress.yaml
+++ b/Charts/elasticsearch/templates/ingress.yaml
@@ -7,7 +7,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    app.kubernetes.io/name: {{ .Chart.Name }}
+    app: {{ .Chart.Name }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 {{- with .Values.ingress.annotations }}
