--- a/Charts/grafana/templates/ingress.yaml
+++ b/Charts/grafana/templates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
   name: {{ $fullName }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ template "grafana.name" . }}
+    app: {{ template "grafana.name" . }}
     chart: {{ template "grafana.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
