--- a/Charts/fluent-bit/templates/secret.yaml
+++ b/Charts/fluent-bit/templates/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: "{{ template "fluent-bit.fullname" . }}-es-tls-secret"
   labels:
-    app.kubernetes.io/name: {{ template "fluent-bit.name" . }}
+    app: {{ template "fluent-bit.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
