--- a/Charts/fluent-bit/templates/servicemonitor.yaml
+++ b/Charts/fluent-bit/templates/servicemonitor.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: {{ .Values.metrics.serviceMonitor.namespace }}
   {{- end }}
   labels:
-    app.kubernetes.io/name: {{ template "fluent-bit.name" . }}
+    app: {{ template "fluent-bit.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
@@ -29,6 +29,6 @@ spec:
       - {{ .Release.Namespace }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "fluent-bit.name" . }}
+      app: {{ include "fluent-bit.name" . }}
       release: {{ .Release.Name }}
 {{- end }}
