--- a/Charts/fluent-bit/templates/tests/test-configmap.yaml
+++ b/Charts/fluent-bit/templates/tests/test-configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ template "fluent-bit.fullname" . }}-test
   labels:
-    app.kubernetes.io/name: {{ template "fluent-bit.fullname" . }}
+    app: {{ template "fluent-bit.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
