--- a/Charts/grafana/templates/clusterrole.yaml
+++ b/Charts/grafana/templates/clusterrole.yaml
@@ -3,7 +3,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   labels:
-    app.kubernetes.io/name: {{ template "grafana.name" . }}
+    app: {{ template "grafana.name" . }}
     chart: {{ template "grafana.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
