--- a/Charts/grafana/templates/deployment.yaml
+++ b/Charts/grafana/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ template "grafana.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ template "grafana.name" . }}
+    app: {{ template "grafana.name" . }}
     chart: {{ template "grafana.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -16,7 +16,7 @@ spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ template "grafana.name" . }}
+      app: {{ template "grafana.name" . }}
       release: {{ .Release.Name }}
 {{- with .Values.deploymentStrategy }}
   strategy:
@@ -25,7 +25,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ template "grafana.name" . }}
+        app: {{ template "grafana.name" . }}
         release: {{ .Release.Name }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
