--- a/Charts/grafana/templates/tests/test-role.yaml
+++ b/Charts/grafana/templates/tests/test-role.yaml
@@ -4,7 +4,7 @@ kind: Role
 metadata:
   name: {{ template "grafana.fullname" . }}-test
   labels:
-    app.kubernetes.io/name: {{ template "grafana.name" . }}
+    app: {{ template "grafana.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
