--- a/Charts/kiali/templates/configmap.yaml
+++ b/Charts/kiali/templates/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kiali
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: kiali
+    app: kiali
     release: {{ .Release.Name }}
 data:
   config.yaml: |
