--- a/Charts/kiali/templates/deployment.yaml
+++ b/Charts/kiali/templates/deployment.yaml
@@ -4,18 +4,18 @@ metadata:
   name: kiali
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: kiali
+    app: kiali
     release: {{ .Release.Name }}
 spec:
   replicas: {{ .Values.kiali.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: kiali
+      app: kiali
   template:
     metadata:
       name: kiali
       labels:
-        app.kubernetes.io/name: kiali
+        app: kiali
         release: {{ .Release.Name }}
       annotations:
         sidecar.istio.io/inject: "false"
