--- a/Charts/kibana/templates/configmap.yaml
+++ b/Charts/kibana/templates/configmap.yaml
@@ -5,7 +5,7 @@ kind: ConfigMap
 metadata:
   name: {{ template "fullname" . }}-config
   labels:
-    app.kubernetes.io/name: {{ .Chart.Name }}
+    app: {{ .Chart.Name }}
     release: {{ .Release.Name | quote }}
 data:
 {{- range $path, $config := .Values.kibanaConfig }}
