--- a/Charts/kibana/templates/service.yaml
+++ b/Charts/kibana/templates/service.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ .Chart.Name }}
+    app: {{ .Chart.Name }}
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service }}
 {{- with .Values.service.annotations }}
@@ -22,5 +22,5 @@ spec:
       name: http
       targetPort: {{ .Values.httpPort }}
   selector:
-    app.kubernetes.io/name: {{ .Chart.Name }}
+    app: {{ .Chart.Name }}
     release: {{ .Release.Name | quote }}
