--- a/Charts/metricbeat/templates/podsecuritypolicy.yaml
+++ b/Charts/metricbeat/templates/podsecuritypolicy.yaml
@@ -4,7 +4,7 @@ kind: PodSecurityPolicy
 metadata:
   name: {{ template "metricbeat.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ template "metricbeat.name" . }}
+    app: {{ template "metricbeat.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
