--- a/Charts/metricbeat/templates/secret.yaml
+++ b/Charts/metricbeat/templates/secret.yaml
@@ -4,7 +4,7 @@ kind: Secret
 metadata:
   name: {{ template "metricbeat.fullname" . }}-daemonset-config
   labels:
-    app.kubernetes.io/name: {{ template "metricbeat.name" . }}
+    app: {{ template "metricbeat.name" . }}
     chart: {{ template "metricbeat.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -19,7 +19,7 @@ kind: Secret
 metadata:
   name: {{ template "metricbeat.fullname" . }}-deployment-config
   labels:
-    app.kubernetes.io/name: {{ template "metricbeat.name" . }}
+    app: {{ template "metricbeat.name" . }}
     chart: {{ template "metricbeat.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -34,7 +34,7 @@ kind: Secret
 metadata:
   name: {{ template "metricbeat.fullname" . }}-daemonset-modules
   labels:
-    app.kubernetes.io/name: {{ template "metricbeat.name" . }}
+    app: {{ template "metricbeat.name" . }}
     chart: {{ template "metricbeat.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -53,7 +53,7 @@ kind: Secret
 metadata:
   name: {{ template "metricbeat.fullname" . }}-deployment-modules
   labels:
-    app.kubernetes.io/name: {{ template "metricbeat.name" . }}
+    app: {{ template "metricbeat.name" . }}
     chart: {{ template "metricbeat.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -72,7 +72,7 @@ kind: Secret
 metadata:
   name: {{ $secret.name }}
   labels:
-    app.kubernetes.io/name: {{ template "metricbeat.name" $ }}
+    app: {{ template "metricbeat.name" $ }}
     chart: {{ template "metricbeat.chart" $ }}
     release: {{ $.Release.Name }}
     heritage: {{ $.Release.Service }}
