--- a/Charts/metricbeat/templates/serviceaccount.yaml
+++ b/Charts/metricbeat/templates/serviceaccount.yaml
@@ -4,7 +4,7 @@ kind: ServiceAccount
 metadata:
   name: {{ template "metricbeat.serviceAccountName" . }}
   labels:
-    app.kubernetes.io/name: {{ template "metricbeat.name" . }}
+    app: {{ template "metricbeat.name" . }}
     chart: {{ template "metricbeat.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
