--- a/Charts/prometheus-operator/templates/prometheus-operator/prometheus-operator-cluster-role.yaml
+++ b/Charts/prometheus-operator/templates/prometheus-operator/prometheus-operator-cluster-role.yaml
@@ -3,7 +3,7 @@ kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/name: prometheus-operator
+    app: prometheus-operator
     app.kubernetes.io/version: v0.31.1
   name: prometheus-operator
 rules:
