--- a/Charts/prometheus-operator/templates/prometheus-operator/prometheus-operator-deployment.yaml
+++ b/Charts/prometheus-operator/templates/prometheus-operator/prometheus-operator-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/name: prometheus-operator
+    app: prometheus-operator
     app.kubernetes.io/version: v0.31.1
   name: prometheus-operator
   namespace: monitoring
@@ -12,12 +12,12 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/component: controller
-      app.kubernetes.io/name: prometheus-operator
+      app: prometheus-operator
   template:
     metadata:
       labels:
         app.kubernetes.io/component: controller
-        app.kubernetes.io/name: prometheus-operator
+        app: prometheus-operator
         app.kubernetes.io/version: v0.31.1
     spec:
       containers:
