--- a/Charts/prometheus-operator/templates/prometheus-operator/prometheus-operator-service.yaml
+++ b/Charts/prometheus-operator/templates/prometheus-operator/prometheus-operator-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/name: prometheus-operator
+    app: prometheus-operator
     app.kubernetes.io/version: v0.31.1
   name: prometheus-operator
   namespace: monitoring
@@ -15,4 +15,4 @@ spec:
     targetPort: http
   selector:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/name: prometheus-operator
+    app: prometheus-operator
