--- a/Test/Test.Neon.Kube/Test.Neon.Kube.csproj
+++ b/Test/Test.Neon.Kube/Test.Neon.Kube.csproj
@@ -26,7 +26,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0-preview-20190828-03" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="NATS.Client" Version="0.9.0" />
     <PackageReference Include="STAN.Client" Version="0.1.6" />
     <PackageReference Include="xunit" Version="2.4.1" />
