#600: cluster manager: Enable .NET server GC by default

--- a/Services/operator-cluster-manager/operator-cluster-manager.csproj
+++ b/Services/operator-cluster-manager/operator-cluster-manager.csproj
@@ -4,6 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>ClusterManager</RootNamespace>
+    <LangVersion>latest</LangVersion>
+    <ServerGarbageCollection>true</ServerGarbageCollection>
+    <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
   </PropertyGroup>
 
   <ItemGroup>
