--- a/Services/cluster-manager/cluster-manager.csproj
+++ b/Services/cluster-manager/cluster-manager.csproj
@@ -7,6 +7,7 @@
     <LangVersion>latest</LangVersion>
     <ServerGarbageCollection>true</ServerGarbageCollection>
     <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
+    <AssemblyName>cluster-manager</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
