--- a/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
+++ b/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
@@ -289,6 +289,9 @@
     <Compile Include="..\Test.Neon.Common\Csv\Test_CsvWriter.cs">
       <Link>Csv\Test_CsvWriter.cs</Link>
     </Compile>
+    <Compile Include="..\Test.Neon.Common\Diagnostics\Test_Assert.cs">
+      <Link>Diagnostics\Test_Assert.cs</Link>
+    </Compile>
     <Compile Include="..\Test.Neon.Common\Helper\Test_ByteUnits.cs">
       <Link>Helper\Test_ByteUnits.cs</Link>
     </Compile>
