--- a/Lib/Neon.Kube.Hosting/Neon.Kube.Hosting.csproj
+++ b/Lib/Neon.Kube.Hosting/Neon.Kube.Hosting.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.6.7-alpha</Version>
+    <Version>0.6.7-alpha.1</Version>
     <Authors>Jeff Lill</Authors>
     <Company>neonFORGE, LLC</Company>
     <Product>neonKUBE</Product>
