--- a/Charts/cluster-manager/values.yaml
+++ b/Charts/cluster-manager/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nkubeio/cluster-manager
+  repository: nkubedev/cluster-manager
   tag: latest
   pullPolicy: Always
 
