--- a/Lib/Neon.SSH.NET/Neon.SSH.NET.csproj
+++ b/Lib/Neon.SSH.NET/Neon.SSH.NET.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Renci.SshNet</RootNamespace>
-    <Version>0.6.7-alpha.1</Version>
+    <Version>0.6.8-alpha</Version>
     <Company>Renci</Company>
     <Product>SSH.NET</Product>
     <Description>SSH.NET is a Secure Shell (SSH) library for .NET, optimized for parallelism.
