--- a/Services/test-cadence/test-cadence.csproj
+++ b/Services/test-cadence/test-cadence.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <RootNamespace>cadence_tester</RootNamespace>
+    <RootNamespace>CadenceTester</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
