--- a/Charts/fluentd/values.yaml
+++ b/Charts/fluentd/values.yaml
@@ -125,7 +125,7 @@ configMaps:
     <match **>
       @id elasticsearch
       @type elasticsearch
-      @log_level debug
+      @log_level info
       include_tag_key true
       # Replace with the host/port to your Elasticsearch cluster.
       host "#{ENV['OUTPUT_HOST']}"
