--- a/Lib/Neon.Couchbase/Neon.Couchbase.csproj
+++ b/Lib/Neon.Couchbase/Neon.Couchbase.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Neon.Couchbase</RootNamespace>
     <Authors>Jeff Lill</Authors>
-    <Version>0.7.0-alpha</Version>
+    <Version>0.7.0</Version>
     <Company>neonFORGE, LLC</Company>
     <Product>neonKUBE</Product>
     <Description>neonKUBE Couchbase client extensions.</Description>
