--- a/Lib/Neon.Kube.Azure/Neon.Kube.Azure.csproj
+++ b/Lib/Neon.Kube.Azure/Neon.Kube.Azure.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.7.0-alpha</Version>
+    <Version>0.7.0-internal</Version>
     <Authors>Jeff LIll</Authors>
     <Company>neonFORGE, LLC</Company>
     <Product>neonHIVE</Product>
