--- a/Lib/Neon.Kube.HyperV/Neon.Kube.HyperV.csproj
+++ b/Lib/Neon.Kube.HyperV/Neon.Kube.HyperV.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.7.0-alpha</Version>
+    <Version>0.7.0-internal</Version>
     <Authors>Jeff Lill</Authors>
     <Company>neonFORGE, LLC</Company>
     <Description>neonKUBE Hyper-V Hosting.</Description>
