--- a/Lib/Neon.Kube.Service/Neon.Kube.Service.csproj
+++ b/Lib/Neon.Kube.Service/Neon.Kube.Service.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Neon.Service</RootNamespace>
-    <Version>0.7.0-alpha</Version>
+    <Version>0.7.0</Version>
     <Company>neonFORGE, LLC</Company>
     <Authors>Jeff Lill</Authors>
     <Description>neonKUBE service library.</Description>
