--- a/Lib/Neon.Xunit/Neon.Xunit.csproj
+++ b/Lib/Neon.Xunit/Neon.Xunit.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Neon.Xunit</RootNamespace>
-    <Version>0.7.0-alpha</Version>
+    <Version>0.7.0</Version>
     <Authors>Jeff Lill</Authors>
     <Company>neonFORGE, LLC</Company>
     <Description>neonKUBE Xunit related extensions.</Description>
